collapsable panel icon and hover styling defect fixed

--- a/apps/publisher/themes/default/css/custom.css
+++ b/apps/publisher/themes/default/css/custom.css
@@ -200,6 +200,7 @@ h2.field-title a.collapsing-h2 {
     font-size: 22px;
     font-weight: 200;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    cursor:pointer;
 }
 
 a.collapsing-h2{
@@ -517,6 +518,11 @@ i.cu-btn-exp-col {
 .btn-collapsed {
     background:url('../img/icons/ico-collapsed.png') no-repeat;      
 }
+
+.collapsed .btn-collapsed {
+     background:url('../img/icons/ico-expanded.png') no-repeat;
+}
+
 .sort-asset-info{
     color: #a5a5a5;
     font-size: 11px;
@@ -937,6 +943,7 @@ h2 span.fa-stack{
 
 #navbar {
     float:left;
+    padding-left:0px;
 }
 
 .wr-main-content {
